# trans-db

./: .claudeignore  .gitignore  AGENTS.md  AUDIT_LOG.md  CLAIMS_MATRIX.md  CLAUDE.md  CMakeLists.txt  NEXT_TASK.md  PROJECT_CONTEXT.md  PROJECT_STATE.md  README.md  vcpkg.json
bench/: benchmark.cpp  benchmark.h  main_bench.cpp  tpcc.cpp  tpcc.h
bench/results/: group_commit_sweep.md  group_commit_sweep_raw.json  tpcc_group_commit.md  tpcc_grpc.md  tpcc_style_full_mix_7ab86ffe4ca1.json
bench_data_mt3/shard0/shard0_rep0/db/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
bench_data_mt3/shard0/shard0_rep1/: wal
bench_data_mt3/shard0/shard0_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard0/shard0_rep2/: wal
bench_data_mt3/shard0/shard0_rep2/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard1/shard1_rep0/: wal
bench_data_mt3/shard1/shard1_rep0/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard1/shard1_rep1/: wal
bench_data_mt3/shard1/shard1_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard1/shard1_rep2/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard2/shard2_rep0/: wal
bench_data_mt3/shard2/shard2_rep0/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard2/shard2_rep1/: wal
bench_data_mt3/shard2/shard2_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_data_mt3/shard2/shard2_rep2/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard0/shard0_rep0/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard0/shard0_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard0/shard0_rep2/: wal
bench_opt_mt3/shard0/shard0_rep2/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard1/shard1_rep0/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard1/shard1_rep1/: wal
bench_opt_mt3/shard1/shard1_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard1/shard1_rep2/: wal
bench_opt_mt3/shard1/shard1_rep2/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard2/shard2_rep0/: wal
bench_opt_mt3/shard2/shard2_rep0/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard2/shard2_rep1/db/: IDENTITY  LOG  MANIFEST-000005
bench_opt_mt3/shard2/shard2_rep2/: wal
bench_opt_mt3/shard2/shard2_rep2/db/: IDENTITY  LOG  MANIFEST-000005
docker/: Dockerfile  Dockerfile.replica  docker-compose.yml
proto/: raft.proto  shard.proto
scripts/: launch_cluster.ps1  run_group_commit_sweep.ps1  run_jepsen_docker.ps1
src/: main.cpp  replica_main.cpp
src/cluster/: cluster_config.cpp  cluster_config.h  cluster_launcher.cpp  cluster_launcher.h
src/coordinator/: catalog.cpp  catalog.h  coordinator.cpp  coordinator.h  coordinator_log.cpp  coordinator_log.h  distributed_join.cpp  distributed_join.h  executor.cpp  executor.h  parser.cpp  parser.h  row_codec.cpp  row_codec.h  timestamp.h
src/pgwire/: pgwire_server.cpp  pgwire_server.h
src/raft/: grpc_raft_transport.cpp  grpc_raft_transport.h  raft_grpc_service.cpp  raft_grpc_service.h  raft_log.cpp  raft_log.h  raft_node.cpp  raft_node.h  raft_proto_convert.cpp  raft_proto_convert.h  raft_state_machine.cpp  raft_state_machine.h  raft_transport.cpp  raft_transport.h
src/shard/: distributed_join_handler.cpp  distributed_join_handler.h  shard_server.cpp  shard_server.h
src/storage/: key_encoding.cpp  key_encoding.h  mvcc_iterator.cpp  mvcc_store.cpp  mvcc_store.h  status.h
src/txn/: group_commit.cpp  group_commit.h  lock_manager.cpp  lock_manager.h  transaction.h  txn_manager.cpp  txn_manager.h  wal.cpp  wal.h
test/: test_coordinator_log.cpp  test_e2e.cpp  test_fault.cpp  test_mvcc_store.cpp  test_parser.cpp  test_pgwire.cpp  test_raft.cpp  test_txn.cpp
tests/jepsen/: Dockerfile  README.md  compose.jepsen.yml  faults.sh  history_checker.py  jepsen_worker.cpp  run_jepsen.sh  run_local_smoke.ps1  run_scenarios.py
tests/jepsen/results/: _self_test_bad.jsonl  _self_test_good.jsonl  _t.jsonl  local_smoke.md
tests/results/: distributed_join.md
